added sqllite & migrations & status put endpoint

--- a/FranksDinerBlazor/Server/appsettings.json
+++ b/FranksDinerBlazor/Server/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-OK51JK2;Database=FranksDiner;User Id=lgn_frank;Password=fr4Nk!5Al3GenD!!;TrustServerCertificate=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=Database/FranksDiner.db"
   },
   "Settings": {
     "OrderTimeout": 120,
