--- a/.gitignore
+++ b/.gitignore
@@ -4,12 +4,12 @@
 
 /.vs
 /.idea
-/FranksDinerBlazor/Client/bin/Debug/net6.0
+/FranksDinerBlazor/Client/bin
 /FranksDinerBlazor/Client/obj
-/FranksDinerBlazor/Server/bin/Debug/net6.0
+/FranksDinerBlazor/Server/bin
 /FranksDinerBlazor/Server/obj
 /FranksDinerBlazor/Server/FranksDinerBlazor.Server.csproj.user
-/FranksDinerBlazor/Shared/bin/Debug/net6.0
-/FranksDinerBlazor/Shared/obj/Debug/net6.0
+/FranksDinerBlazor/Shared/bin
+/FranksDinerBlazor/Shared/obj
 /FranksDinerBlazor/Shared/obj
 TerminalFrontend/settings.js
