started google auth service

--- a/FranksDinerBlazor/Server/appsettings.json
+++ b/FranksDinerBlazor/Server/appsettings.json
@@ -3,17 +3,19 @@
     "DefaultConnection": "Data Source=Database/FranksDiner.db"
   },
   "Settings": {
-    "OrderTimeout": 120,
-    "Econduit": {
-      "Url": "https://api.econduitapps.uat.payroc.com/1.0",
-      "ApiKey": "d9197d4c-21b2-4e4d-a7eb-76171a499473",
-      "ApiPassword": "8eb96dd0-5b4d-4b80-9145-997e602a7cbe"
-    }
+    "OrderTimeout": 120
   },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "Authentication": {
+    "Google": {
+      "ClientId": "465822313879-7ik14gipurevgv4sn0hk0674vsksg9l7.apps.googleusercontent.com",
+      "ClientSecret": "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",
+      "TokenAudience": "....apps.googleusercontent.com"
     }
   },
   "AllowedHosts": "*"
