Fix db connection string

--- a/FranksDinerBlazor/Server/appsettings.json
+++ b/FranksDinerBlazor/Server/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=./Database/FranksDiner.db"
+    "DefaultConnection": "Data Source=/db/FranksDiner.db"
   },
   "Kestrel": {
     "EndPoints": {
